--- a/web/css/list.css
+++ b/web/css/list.css
@@ -30,10 +30,11 @@ ul#sf_media_browser_list {
   float: left;*/
 }
 ul#sf_media_browser_list li {
+  position: relative;
   float:        left;
   margin:       0 10px 10px 0;
   width:        110px;
-  height:       130px;
+  /*height:       130px;*/
   background:   #EEE;
   border:       1px solid #999;
   text-align:   center;
@@ -41,7 +42,9 @@ ul#sf_media_browser_list li {
   list-style:   none;
 }
 ul#sf_media_browser_list a {
+  position: absolute;
   display:  block;
+  padding: 2px;
 }
 ul#sf_media_browser_list img {
   border:     none;
@@ -140,8 +143,11 @@ label.name span#cancel {
   margin: 0px 10px 0px 0; 
   border: 1px solid #999999; 
 }
+#droppable img {
+  width: 100%;
+  height: 100%;
+}
 .md-raw-top{
-  border-bottom: 1px solid #ccc;
   padding: 5px;
   margin-bottom: 10px;
 }
@@ -154,4 +160,7 @@ label.name span#cancel {
 .rigth,.rigth input{
   float:right;
 }  
+#sf_media_files fieldset {
+  margin-bottom: 15px;
+}
 /* ####################################################################### */
