--- a/web/sfSWFUpload/theme_custom/css/upload.css
+++ b/web/sfSWFUpload/theme_custom/css/upload.css
@@ -54,15 +54,6 @@ ul li {
   text-align:left;
 }
 
-/* Links */
-
-a			{background:transparent; }
-a:link 			{color:#000; }
-a:visited 		{color:#000; }
-a:visited:hover {color:#000; }
-a:hover 		{color:#000; }
-a:active 		{color:#000; }
-
 
 #thearea {
   position:relative;
@@ -113,16 +104,16 @@ body {
 }
 
 .dialog .createdir {
-  background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/dialog-icon-newfolder.png') no-repeat left;
+  /*background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/dialog-icon-newfolder.png') no-repeat left;*/
 }
 
 .dialog .upload {
-  background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/dialog-icon-upload.png') no-repeat left;
+  /*background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/dialog-icon-upload.png') no-repeat left;*/
 }
 
 
 .dialog .facts { 
-  background:#f3f2f0;
+  /*background:#f3f2f0;*/
   padding:8px 16px 12px 20px;
   font:90% tahoma, arial, sans-serif;
 }
@@ -138,8 +129,8 @@ body {
 #uploadarea {
   position: relative;
   padding: 16px;
-  height: 220px;
-  overflow: hidden;
+  /*height: 220px;*/
+  /*overflow: hidden;*/
 }
 
 * html #uploadarea {
@@ -154,7 +145,7 @@ body {
 }
 
 #uploadarea .addbutton, #uploadarea #uploadstart, .button {
-  display: block;
+/*  display: block;
   width: 182px;
   height: 26px;
   margin: 0 0 1em;
@@ -163,7 +154,7 @@ body {
   font-size: 1em;
   font-weight: bold;
   line-height: 26px;
-  text-decoration: none;
+  text-decoration: none;*/
 }
 
 .button{
@@ -171,7 +162,7 @@ body {
 }
 
 #uploadarea #uploadstart{
-  background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/submit-greyWide.png') no-repeat;
+  /*background: url('/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/submit-greyWide.png') no-repeat;*/
 }
 
 #uploadarea #fileblock {
@@ -180,7 +171,7 @@ body {
 
 #uploadarea #filelist {
   position:relative;
-  max-height: 7em;
+  max-height: 27em;
   overflow: auto;
   margin-bottom: 6px;
   border: 1px solid #9fadc4;
@@ -202,29 +193,29 @@ body {
 }
 
 #uploadarea #status {
-  border: 1px solid #9fadc4;
+/*  border: 1px solid #9fadc4;
   padding: 1px;
-  width: 506px;
-  height: 34px;
+  width: 506px;*/
+  height: 35px;
 }
 
 #uploadarea #progressbar {
-  position: relative;
+/*  position: relative;
   width: 100%;
   height: 34px;
   background: url(/mdMediaDoctrine2Plugin/sfSWFUpload/theme_custom/images/progress.gif);
-  z-index: 10;
+  z-index: 10;*/
 }
 
 #uploadarea .progresstext {
-  position: relative;
-  top: -34px;
-  left: 0;
-  width: 100%;
+  font-size: 14px;
+  color: white;
+  position: absolute;
+  top: 305px;
+  left: 125px;
+  width: 65%;
   text-align: center;
-  color: #535353;
-  font-weight: bold;
-  line-height: 36px;
+  line-height: 35px;
   z-index: 11;
 }
 
